--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "angular-seed",
+  "name": "sprint-cards",
   "private": true,
   "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
-  "license": "MIT",
+  "description": "To print sprint cards from JIIRA",
+  "repository": "https://github.com/abdulbasithuk/SprintCards.git",
   "devDependencies": {
     "bower": "^1.3.1",
     "http-server": "^0.6.1",
